--- a/static/style.css
+++ b/static/style.css
@@ -22,27 +22,28 @@ body {
 /* CHATBOX
 =============== */
 .chatbox {
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     right: 30px;
 }
 
 /* CONTENT IS CLOSE */
 .chatbox__support {
-    display: flex;
+    display: none;
     flex-direction: column;
     background: #eee;
     width: 300px;
     height: 350px;
-    z-index: -123456;
+    z-index: -1;
     opacity: 0;
     transition: all .5s ease-in-out;
 }
 
 /* CONTENT ISOPEN */
 .chatbox--active {
+    display: flex;
     transform: translateY(-40px);
-    z-index: 123456;
+    z-index: 2;
     opacity: 1;
 
 }
