--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link rel="stylesheet" href="../static/style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -32,11 +32,9 @@
         </div>
     </div>
 </div>
-
     <script>
         $SCRIPT_ROOT = (request.script_root|tojson);
     </script>
-    <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
-
+    <script type="text/javascript" src="../static/app.js"></script>
 </body>
 </html>
